--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -3,5 +3,5 @@ Flask-Classful==0.14.2
 Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.3.2
 flask-cors==3.0.7
-SQLAlchemy==1.3.13
 marshmallow==3.0.3
+passlib==1.7.2
